tests/snapshots/snapshot__self_hosted-2.snap
---
source: tests/snapshot.rs
expression: "zizmor(&workflow_under_test(\"self-hosted.yml\"), &[], false)?"
snapshot_kind: text
---
No findings to report. Good job!
