tests/snapshots/snapshot__self_hosted-8.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"self-hosted/issue-283-repro.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
No findings to report. Good job!
