tests/snapshots/snapshot__self_hosted-9.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"self-hosted/issue-22-repro.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job! (10 suppressed)
