tests/snapshots/snapshot__template_injection-3.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"template-injection/issue-22-repro.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job! (4 suppressed)
